--- a/archivos/templates/admi_grupo.html
+++ b/archivos/templates/admi_grupo.html
@@ -35,7 +35,9 @@
       <label for="nombre">Nombre:</label>
       <input type="text" class="form-control" id="nombre" name="nombre" value="{{ grupo.name }}"><br>
       <label for="nombre">Descripción:</label>
-      <input type="text" class="form-control" id="description" name="description" value="{{ grupo.description }}"><br>
+
+      <textarea class="form-control" id="descripcion" name="descripcion">{{ grupo.description.description }}</textarea>
+      <br>
 
       <input type="text" id="search" placeholder="Buscar usuario..."><br><br>
       <div id="user-list-container" class="user-list-container">
