--- a/archivos/templates/baseusuario.html
+++ b/archivos/templates/baseusuario.html
@@ -326,17 +326,21 @@
                         }
                         .textologo{
                             color: #ffffff;
-                            margin-bottom: 10px;
+                            margin-bottom: 5px;  
                             margin-top: 10px;
                             margin-left: 10px;
+                            font-size: 40px;    
+                        }
+                        .hola{
+                            font-size: 30px;  
                         }
                         .dark-mode .textologo{
                             color: #343a40;
 
                         }
                         .imagenlogo{
-                            height: 50px; 
-                            width: 50px;
+                            height: 40px; 
+                            width: 40px;
                         }
                         .dark-mode .imagenlogo{
                             filter: invert(80%);
@@ -347,7 +351,7 @@
 
                     <div class="box">
                         <div><img class="imagenlogo" src="https://i.ibb.co/X4cpR8G/logo.png" "></div>
-                        <div><h1 class="textologo"><strong><span> APB2TAL</span></strong></h1></div>
+                        <div class="textologo"><h1 ><strong><span class="hola"> APB2TAL</span></strong></h1></div>
                     </div>
                 
 
