--- a/archivos/templates/grupo_info.html
+++ b/archivos/templates/grupo_info.html
@@ -76,7 +76,8 @@
                     <div style="display: flex; align-items: flex-start;">
                         <div style="padding-right: 10px; color: #666;"> </div>
                         <div style="background-color: #f5f5f5; padding: 10px; border-radius: 5px;">
-                            <h5 style="color: #666; margin: 0;">{{ group.description }}.</h5>
+                            <h5 style="color: #666; margin: 0;">{{ descripcion_grupo }}.
+
                         </div>
                     </div>
                 </div>
