--- a/archivos/templates/baseusuario.html
+++ b/archivos/templates/baseusuario.html
@@ -367,7 +367,7 @@
                 <li class="analizar1"><a href="/archivos/analizar"><i class="fas fa-upload fa-lg"></i> <span>Subir archivos</span></a></li>
                 <li class="Compartidos1"><a href="/compartido"><i class="fas fa-share fa-lg"></i> <span>Compartidos</span></a></li>
                 <li class="misgrupos1"><a href="/grupos"><i class="fas fa-users fa-lg"></i> <span>Grupos</span></a></li>
-                <li class="registros1"><a href="/registros"><i class="fas fa-clipboard fa-lg">  </i>  <span> ‎ ‎ Registros</span></a></li>
+            <!--<li class="registros1"><a href="/registros"><i class="fas fa-clipboard fa-lg">  </i>  <span> ‎ ‎ Registros</span></a></li> -->
 
 
                     {% if user.is_superuser %}
