--- a/archivos/templates/administrar.html
+++ b/archivos/templates/administrar.html
@@ -57,7 +57,7 @@
             <a href="/administrar/grupos" class="btn btn-pink custom-btn"><i class="fas fa-users-cog"></i> Administrar Grupos</a>
         </div>
         <div class="col-md-4">
-            <a href="/administrar/registros_admin" class="btn btn-pink custom-btn"><i class="fas fa-clipboard-list"></i> Logs</a>
+            <a href="" class="btn btn-danger custom-btn"><i class="fas fa-clipboard-list"></i> Logs</a>
         </div>
     </div>
 
