--- a/archivos/templates/contacta.html
+++ b/archivos/templates/contacta.html
@@ -18,24 +18,23 @@
     }
     .custom-btn {
         font-size: 18px;
-        height: 200px; /* Establece la altura */
-        width: 400; /* Establece el ancho */
+        height: 100px; /* Establece la altura */
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-left: 30px;
+
     }
    /* Define el color rosa para los botones */
    .btn-pink {
-        background-color: #5FC451;
-        border-color: #5FC451;
+        background-color: #225986;
+        border-color: #225986;
         color: white;
     }
 
     /* Cambia el color al pasar el mouse */
     .btn-pink:hover {
-        background-color: #FF5733;
-        border-color: #FF5733;
+        background-color: #652897;
+        border-color: #652897;
         color: white;
     }
     .custom-btn i {
@@ -51,7 +50,7 @@
 
 </style>
 <div class="container text-center">
-    <h2 class="text-center display-4 py-4 mt-5 mb-5 ml-5">Contacta</h2>
+    <h2 class="text-center display-4 py-4 mt-5 mb-5">Contacta</h2>
 
     <div class="row ">
         <div class="col-md-4">
