--- a/archivos/templates/administrar.html
+++ b/archivos/templates/administrar.html
@@ -13,24 +13,23 @@
     }
     .custom-btn {
         font-size: 18px;
-        height: 200px; /* Establece la altura */
-        width: 400; /* Establece el ancho */
+        height: 100px; /* Establece la altura */
+         /* Establece el ancho */
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-left: 30px;
     }
    /* Define el color rosa para los botones */
    .btn-pink {
-        background-color: #5FC451;
-        border-color: #5FC451;
+        background-color: #225986;
+        border-color: #225986;
         color: white;
     }
 
     /* Cambia el color al pasar el mouse */
     .btn-pink:hover {
-        background-color: #FF5733;
-        border-color: #FF5733;
+        background-color: #652897;
+        border-color: #652897;
         color: white;
     }
     .custom-btn i {
@@ -57,7 +56,7 @@
             <a href="/administrar/grupos" class="btn btn-pink custom-btn"><i class="fas fa-users-cog"></i> Administrar Grupos</a>
         </div>
         <div class="col-md-4">
-            <a href="" class="btn btn-danger custom-btn"><i class="fas fa-clipboard-list"></i> Logs</a>
+            <a href="/administrar/registros_admin" class="btn btn-pink custom-btn"><i class="fas fa-clipboard-list"></i> Logs</a>
         </div>
     </div>
 
@@ -66,10 +65,10 @@
             <a href="/admin" class="btn btn-pink custom-btn"><i class="fas fa-cogs"></i> Administración Django</a>
         </div>
         <div class="col-md-4">
-            <a href="/" class="btn btn-pink custom-btn"><i class="fas fa-spinner"></i> Próximamente Django</a>
+            <a href="/" class="btn btn-pink custom-btn"><i class="fas fa-spinner"></i> Próximamente </a>
         </div>
         <div class="col-md-4">
-            <a href="/" class="btn btn-pink custom-btn"><i class="fas fa-spinner"></i> Próximamente Django</a>
+            <a href="/" class="btn btn-pink custom-btn"><i class="fas fa-spinner"></i> Próximamente </a>
         </div>
     </div>
 </div>
