--- a/archivos/templates/base.html
+++ b/archivos/templates/base.html
@@ -23,7 +23,7 @@
     body {
       height: 100vh;
       width: 100%;
-      background: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
+      background: linear-gradient(to bottom, #1f8a9c 23%, #701c91 95%);
     }
  
     .header {
@@ -187,18 +187,10 @@
         transition: 0.3s ease;
       }
  
-      .navbar #menu-toggle:checked ~ .links {
-        left: 0;
-      }
+
+
  
-      .navbar #hamburger-btn {
-        display: block;
-      }
- 
-      .header .buttons {
-        display: none;
-      }
- 
+      
       .hero-section .hero {
         max-width: 100%;
         text-align: center;
@@ -208,49 +200,6 @@
         display: none;
       }
     }
-  </style>
- 
- 
-<body>
- 
-  <header class="header">
-   
-    <nav class="navbar">
-     
-      <h2 style="margin-top: 8px !important; text-align: left;" class="logo">
-        <img src="https://i.ibb.co/X4cpR8G/logo.png" style="height: 50px; width: 50px;">
- 
-        <a href="/">APB2TAL</a>
- 
-      </h2>
-          <input type="checkbox" id="menu-toggle" />
-      <label for="menu-toggle" id="hamburger-btn">
-        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
-          <path d="M3 12h18M3 6h18M3 18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-        </svg>
-      </label>
-      <div class="links">
-        <a href="/">Menú</a>
-        <a href="/about">Sobre nosotros</a>
-        <a href="/project">El proyecto</a>
- 
-        {% if user.is_authenticated %}
-        {% endif %}
-      </div>
-      <div class="buttons">
-        {% if user.is_authenticated %}
-        <a href="/perfil">Mi Perfil</a>
-        <a href="/signout" class="signup">Cerrar Sessión</a>
-        {% else %}
-        <a href="/signin" class="signin">Login</a>
-        <a href="/signup" class="signup">Registro</a>
-        {% endif %}
-      </div>
-   
-    </nav>
- 
-  </header>
-  <style>
     .footer {
       position: absolute;
       bottom: 0;
@@ -264,23 +213,49 @@
  
     .footer p {
       color: #b4c5c5;
-      padding-left: 20px;
       font-size: 11px;
       text-decoration: none;
      
     }
   </style>
  
+ 
+<body>
+  <header class="header">
+    <nav class="navbar">
+
+
+      <h2 style="margin-top: 8px !important; text-align: left;" class="logo">
+        <img src="https://i.ibb.co/X4cpR8G/logo.png" style="height: 50px; width: 50px;">
+ 
+        <a href="/">APB2TAL</a>
+      </h2>
+
+
+
+
+      <div class="buttons">
+        {% if user.is_authenticated %}
+        <a href="/perfil">Mi Perfil</a>
+        <a href="/signout" class="signup">Cerrar Sessión</a>
+        {% else %}
+        <a href="/signin" class="signin">Login</a>
+        <a href="/signup" class="signup">Registro</a>
+        {% endif %}
+      </div>
+    </nav>
+  </header>
+
+
+ 
   <div class="footer">
     <p>© 2024 APB2TAL. Todos los derechos reservados. <a href="/terminos" style="color: #b4c5c5; text-decoration: none;">Términos y condiciones</a></p>
   </div>
+
+
+
   <section class="hero-section">
-   
       {% block content %}
       {% endblock %}
-     
   </section>
- 
- 
-</body>
- 
+     
