--- a/archivos/templates/signup.html
+++ b/archivos/templates/signup.html
@@ -17,6 +17,9 @@
     #acceptTerms {
         color: white; /* Cambiar el color del texto a blanco */
     }
+    .footer {
+                padding-top: 40px !important; /* Ajusta este valor según sea necesario */
+            }
 </style>
 <main class="container">
     <div class="row">
