--- a/archivos/templates/base.html
+++ b/archivos/templates/base.html
@@ -144,6 +144,36 @@
 
         }
       }
+      @media (max-width: 370px) {
+        header {
+          display: flex;
+          justify-content: center; /* Centrar horizontalmente */
+          align-items: center; /* Centrar verticalmente */
+          background-color: #1f1f1f00;
+          height: 100px;
+          gap: 11%;
+          margin-top: 0px !important;
+        }
+        .buttons {
+          display: flex;
+          gap: 6px;
+        }
+        .head a {
+          font-size: 1.55rem;
+          text-decoration: none;
+          color: #000000;
+          font-family: 'Varela Round', sans-serif;
+        }
+        .buttons a{
+          font-size: 0.8rem;
+          text-decoration: none;
+          color: #000000;
+          font-family: 'Varela Round', sans-serif;
+          font-weight: bold;
+          padding: 8px 17px 8px 17px;
+
+        }
+      }
 
       .footer {
         background-color: #2c2c2c; /* Fondo oscuro */
@@ -321,7 +351,59 @@
           margin-bottom: 15%;
         }
       }
+      
+      @media (max-width: 370px) {
+        .motivational-container {
+          margin: 0px;
+        }
 
+        .motivational-text {
+          font-family: 'Montserrat', sans-serif; /* Fuente Montserrat */
+          font-size: 28px; /* Tamaño de fuente grande */
+          font-weight:500;
+          color: #000000; /* Color oscuro profesional */
+          text-align: center;
+          text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); /* Sombra sutil */
+          line-height: 1.3; /* Altura de línea para buena legibilidad */
+          max-width: 900px; /* Ancho máximo para mantener el texto en el centro */
+          margin: 0 auto; /* Centrar el texto horizontalmente */
+          max-width: 300px;
+        }
+
+        .description-text {
+          font-family: 'Montserrat', sans-serif; /* Fuente Montserrat */
+          font-size: 11px; /* Tamaño de fuente más pequeño para el texto descriptivo */
+          font-weight: 400; /* Peso normal */
+          color: #34495e; /* Color un poco más claro que el título */
+          line-height: 1.5; /* Altura de línea para buena legibilidad */
+          max-width: 800px; /* Ancho máximo para mantener el texto en el centro */
+          margin-top: 20px; /* Espacio entre el título y la descripción */
+          max-width: 300px;
+        }
+
+        .button-container {
+          display: flex; /* Usar flexbox para alinear los botones */
+          gap: 26px; /* Espacio entre los botones */
+          justify-content: center; /* Centrar botones horizontalmente */
+          width: 100%; /* Ancho total para centrar correctamente */
+          margin-top: 0px; /* Espacio superior para separar de la descripción */
+          margin-bottom: 15%;
+        }
+        .button {
+          display: inline-block; /* Mostrar como bloque en línea */
+          padding: 12px 24px; /* Espacio interno aumentado */
+          font-family: 'Montserrat', sans-serif; /* Fuente Montserrat */
+          font-size: 10px !important; /* Tamaño de fuente para los botones */
+          font-weight: 500; /* Peso medio */
+          color: rgb(36, 36, 36); /* Color del texto negro */
+          text-decoration: none; /* Sin subrayado */
+          border-radius: 30px; /* Bordes más redondeados */
+          box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para el botón */
+          transition: background-color 0.3s, box-shadow 0.3s; /* Transición suave para el color de fondo y la sombra */
+          padding-top: 14px;
+          margin-bottom: 90px !important;
+        }
+      }
       .button-container {
         display: flex; /* Usar flexbox para alinear los botones */
         gap: 26px; /* Espacio entre los botones */
