--- a/archivos/templates/signup.html
+++ b/archivos/templates/signup.html
@@ -34,6 +34,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-bottom: 40px;
       }
 
     form{
@@ -58,6 +59,12 @@
             width: 350px;
         }
     }
+    @media (max-width: 550px) {
+        section{
+            margin-bottom: 130px;
+        }
+    }
+
 
 </style>
 <main class="container1">
